<resources>
    <string name="app_name" translatable="false">Auklet News Reader</string>
    <string name="action_settings">Settings</string>
    <string name="thumbnail_description">News image</string>

    <!--Mockups' strings-->
    <string name="default_title" translatable="false">Default title try to override text length
        by putting too much text in the title of this news. Let\'s hope it\'s ok.</string>
    <string name="default_text" translatable="false">This is a sample text.  Try to override text length by putting too
        much text of this news. Let\'s hope it\'s ok and it\'s long enough to test it. I
        shall see how does it work. How much more characters will fit? Is it not enough
        already?</string>
    <string name="default_date" translatable="false">31-Dec 23:59</string>
    <string name="sync_account_type" translatable="false">aukletnewsreader.gmail.com</string>
    <string name="content_authority" translatable="false">com.gmail.deluramichal.aukletnewsreader</string>
    <string name="title_activity_select_channels">Select Channels</string>
    <string name="noConnection">No network connection available</string>
    <string name="noChannels">No channels found</string>
    <string name="action_channels">Channels</string>
    <string name="no_data">No news to show.</string>
    <string name="add_channels">Add channels</string>

    <!-- Strings related to Settings -->
    <string name="title_activity_settings">Settings</string>

    <string name="pref_sync_interval_seconds_key" translatable="false">sync_interval</string>
    <string name="pref_sync_interval_seconds_title">Sync frequency</string>
    <string name="pref_sync_interval_seconds_default" translatable="false">3600</string>
    <string name="pref_item_sync_interval_15_min">15 minutes</string>
    <string name="pref_item_sync_interval_30_min">30 minutes</string>
    <string name="pref_item_sync_interval_60_min">1 hour</string>
    <string name="pref_item_sync_interval_180_min">3 hours</string>
    <string name="pref_item_sync_interval_360_min">6 hours</string>
    <string name="pref_item_sync_interval_720_min">12 hours</string>
    <string name="pref_item_sync_interval_1440_min">24 hours</string>
    <string name="pref_item_sync_interval_never">Never</string>
    <string name="pref_sync_interval_seconds_summary">Synchronize channels frequency</string>
    <string-array name="pref_sync_interval_seconds_titles">
        <item>@string/pref_item_sync_interval_15_min</item>
        <item>@string/pref_item_sync_interval_30_min</item>
        <item>@string/pref_item_sync_interval_60_min</item>
        <item>@string/pref_item_sync_interval_180_min</item>
        <item>@string/pref_item_sync_interval_360_min</item>
        <item>@string/pref_item_sync_interval_720_min</item>
        <item>@string/pref_item_sync_interval_1440_min</item>
        <item>@string/pref_item_sync_interval_never</item>
    </string-array>
    <string-array name="pref_sync_interval_seconds_values">
        <item>900</item>
        <item>1800</item>
        <item>3600</item>
        <item>10800</item>
        <item>21600</item>
        <item>43200</item>
        <item>86400</item>
        <item>-1</item>
    </string-array>

    <string name="pref_system_sync_settings_title">System sync settings</string>
    <string name="pref_show_news_image">Show news image</string>
    <string name="pref_show_news_image_key" translatable="false">showNewsImage</string>
    <string name="pref_show_news_image_default" translatable="false">true</string>

    <string name="pref_days_news_stored_key" translatable="false">daysNewsStored</string>
    <string name="pref_days_news_stored_default" translatable="false">3</string>
    <string name="pref_days_news_stored_title">Keep news for days</string>
    <string name="pref_days_news_stored_summary">How many days news will be stored</string>

    <string name="remove_channels">Remove channels</string>
    <string name="no_channels_selected">You have no selected channels. Please select preferred
        channels from the list.</string>
    <string name="title_activity_channels">Active channels</string>
    <string name="select_channels">Select channels</string>


</resources>
