<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:gravity="center_vertical"
              android:minHeight="?android:attr/listPreferredItemHeight"
              android:orientation="horizontal"
              android:padding="4dp"
    >

    <FrameLayout
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginRight="4dp">

        <ImageView
            android:id="@+id/list_item_thumbnail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/thumbnail_description"
            android:src="@mipmap/ic_launcher"/>
    </FrameLayout>
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/list_item_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_toLeftOf="@+id/list_item_date"
            android:layout_toStartOf="@+id/list_item_date"
            android:fontFamily="sans-serif-condensed"
            android:singleLine="true"
            android:text="@string/default_title"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/list_item_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:fontFamily="sans-serif-condensed"
            android:paddingLeft="4dp"
            android:text="@string/default_date"/>

        <TextView
            android:id="@+id/list_item_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/list_item_title"
            android:fontFamily="sans-serif-condensed"
            android:paddingLeft="4dp"
            android:text="@string/default_text"
            android:textSize="12sp"
            android:elegantTextHeight="false"
            android:linksClickable="false"
            android:maxLines="3"/>
    </RelativeLayout>


</LinearLayout>